package com.dlx.chapter06.proxy;

public interface AdminService {
    void update();
    Object find();
}
